force-app/main/default/objects/Feature_Flag__mdt/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Feature End Date</description>
    <inlineHelpText>Enter the date when the feature should stop.
Blank if permanent.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>