force-app/main/default/objects/Feature_Flag__mdt/fields/Rollout_Type__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Type__c</fullName>
    <label>Rollout Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Permission</fullName>
                <default>true</default>
                <label>Custom Permission</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>