force-app/main/default/objects/Feature_Flag__mdt/fields/Rollout_Value__c.field-meta.xml
<CustomField>
    <fullName>Rollout_Value__c</fullName>
    <inlineHelpText>Not applicable for Enabled/Disabled.
Add Single or Comma Seperated values for multiple checks.</inlineHelpText>
    <label>Rollout Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>