force-app/main/default/objects/Feature_Flag__mdt/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Feature Start Date</description>
    <inlineHelpText>Enter the date when the feature should start.
Blank if permanent</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>